--- a/Public/index.html
+++ b/Public/index.html
@@ -16,6 +16,6 @@
 <body>
     <canvas id="canvas"></canvas>
 
-    <script type="module" src="index.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
